added dummy elements to index

--- a/index.html
+++ b/index.html
@@ -3,13 +3,45 @@
 	<title>Focalendar</title>
 	<link rel="stylesheet/less" type="text/css" href="less/bootstrap.less">
 	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
+  <script src="js/less-1.3.0.min.js"></script>
+
 
 <div class="row-fluid">
-	<div class="span4">Calendar 1</div>
-	<div class="span4">Project x</div>
-	<div class="span4">Personal</div>
+	<div class="span4 calendar red">Calendar 1
+    
+    <li class="vevent" id="">
+      <a class="url" href="http://conferences.oreillynet.com/pub/w/40/program.html">
+    http://conferences.oreillynet.com/pub/w/40/program.html</a>
+      <span class="summary">Web 2.0 Conference</span>: 
+      <abbr class="dtstart" title="2005-10-05">October 5</abbr>-
+      , at the <span class="location">Argent Hotel, San Francisco, CA</span>
+
+    <li class="vevent">
+      <a class="url" href="http://www.uxcampeurope.org/">
+    uxcampeurope.org/</a>
+      <span class="summary">Ux Camp Europe 2012</span>: 
+      <abbr class="dtstart" title="2012-05-26-10-00">May 26</abbr>
+      <abbr class="dtend" title="2012-05-18-00">7</abbr>. Location: <span class="location">Argent Hotel, San Francisco, CA</span>
+
+
+
+      <!-- <abbr class="duration" title="PT1920M"></abbr> -->
+
+
 </div>
 
-<script src="js/less-1.3.0.min.js"></script>
+
+
+  </div>
+	<div class="span4 calendar green">Project x</div>
+	<div class="span4 calendar blue">Personal</div>
+
+
+  
+
+
+
+</div>
+
 <script src="js/jquery-1.7.2.min.js"></script>
 <script src="js/bootstrap-2.0.3.min.js"></script>
