changes to dummies in index

--- a/index.html
+++ b/index.html
@@ -7,32 +7,30 @@
 
 
 <div class="row-fluid">
+
 	<div class="span4 calendar red">Calendar 1
-    
-    <li class="vevent" id="">
-      <a class="url" href="http://conferences.oreillynet.com/pub/w/40/program.html">
-    http://conferences.oreillynet.com/pub/w/40/program.html</a>
-      <span class="summary">Web 2.0 Conference</span>: 
-      <abbr class="dtstart" title="2005-10-05">October 5</abbr>-
-      , at the <span class="location">Argent Hotel, San Francisco, CA</span>
+  
 
     <li class="vevent">
-      <a class="url" href="http://www.uxcampeurope.org/">
-    uxcampeurope.org/</a>
-      <span class="summary">Ux Camp Europe 2012</span>: 
-      <abbr class="dtstart" title="2012-05-26-10-00">May 26</abbr>
-      <abbr class="dtend" title="2012-05-18-00">7</abbr>. Location: <span class="location">Argent Hotel, San Francisco, CA</span>
+      <span class="summary"><a class="url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a></span>: 
+      <abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
+      <abbr class="dtend" title="2012-05-18-00">May 27 18h</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=Berlin,+Erwin-Schr%C3%B6dinger-Zentrum&hl=de&ie=UTF8&cid=559741620872275716">Berlin, Erwin-Schrödinger-Zentrum</a>.</span>
+      <!-- <abbr class="duration" title="PT1920M"></abbr> --> 
+
+      <li class="vevent">
+        <span class="summary"><a class="url" href="http://www.imdb.com/title/tt1517489/">Spy Kids 4D</a></span>: 
+        <abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Astra Filmpalast</a>.</span>
 
 
 
-      <!-- <abbr class="duration" title="PT1920M"></abbr> -->
 
 
-</div>
 
 
 
   </div>
+
+
 	<div class="span4 calendar green">Project x</div>
 	<div class="span4 calendar blue">Personal</div>
 
