--- a/example.html
+++ b/example.html
@@ -18,6 +18,8 @@
 	<script src="js/bootstrap-2.0.3.min.js"></script>
 	<script src="js/underscore-1.3.3.js"></script>
 	<script src="js/backbone-0.9.2.js"></script>
+	<script src="js/backbone-localstorage.js"></script>
+	<script src="src/focalendar.js"></script>
 	
 	<!-- Templates -->
 
