example template added

--- a/example.html
+++ b/example.html
@@ -9,7 +9,25 @@
 
 <body>
 
-	Hello world!
+	<div id="focalenderapp">
+
+	<header>
+		<h1>Focalendar</h1>
+		<input id="new-event" type="text" placeholder="What's up?">
+	</header>
+
+	<section id="main">
+		<input id="toggle-all" type="checkbox">
+		<label for="toggle-all">Mark all as complete</label>
+		<ul id="event-list"></ul>
+	</section>
+
+	<footer>
+		<a id="clear-completed">Clear completed</a>
+		<div id="todo-count"></div>
+	</footer>
+
+	</div>
 
 
 
