some more formatting, element fixes

--- a/index.html
+++ b/index.html
@@ -5,26 +5,39 @@
 	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
 	<script src="js/less-1.3.0.min.js"></script>
 
+<header class="row-fluid">
+	<div class="span4"><h2>Calendar 1</h2></div>
+	<div class="span4"><h2>Project x</h2></div>
+	<div class="span4"><h2>Personal</h2></div>
+</header>
 
 <div class="row-fluid">
 
-	<div class="span4 calendar red">Calendar 1
+	<div class="span4 calendar red">
 
-	<li class="vevent">
-		<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
-		<abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
-		<abbr class="dtend" title="2012-05-18-00">May 27 18h</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=Berlin,+Erwin-Schr%C3%B6dinger-Zentrum&hl=de&ie=UTF8&cid=559741620872275716">Berlin, Erwin-Schrödinger-Zentrum</a>.</span>
-		<!-- <abbr class="duration" title="PT1920M"></abbr> --> 
+		<div class="vevent">
+			<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
+			<abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
+			<abbr class="dtend" title="2012-05-18-00">May 27 18h</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=Berlin,+Erwin-Schr%C3%B6dinger-Zentrum&hl=de&ie=UTF8&cid=559741620872275716">Berlin, Erwin-Schrödinger-Zentrum</a>.</span>
+			<!-- <abbr class="duration" title="PT1920M"></abbr> --> 
+		</div>
 
-	<li class="vevent">
-		<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Spy Kids 4D</a>: 
-		<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Astra Filmpalast</a>.</span>
+		<div class="vevent">
+			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Spy Kids 4D</a>: 
+			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Astra Filmpalast</a>.</span>
+		</div>
 
 	</div>
 
 
-	<div class="span4 calendar green">Project x</div>
-	<div class="span4 calendar blue">Personal</div>
+	<div class="span4 calendar green">
+
+	</div>
+
+
+	<div class="span4 calendar blue">
+
+	</div>
 
 </div>
 
