move JS file and spaces to tabs

--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@
 
 <script src="js/jquery-1.7.2.min.js"></script>
 <script src="js/bootstrap-2.0.3.min.js"></script>
+<script src="js/focalendar.js"></script>
