--- a/example.html
+++ b/example.html
@@ -37,7 +37,7 @@
 	<script src="js/underscore-1.3.3.js"></script>
 	<script src="js/backbone-0.9.2.js"></script>
 	<script src="js/backbone-localstorage.js"></script>
-	<script src="src/focalendar.js"></script>
+	<script src="js/focalendar.js"></script>
 	
 	<!-- Templates -->
 
