--- a/example.html
+++ b/example.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
 	<meta charset="utf-8">
-	<title>Test, test, eins, zwei</title>
-	
+	<title>Focalendar</title>
+	<link rel="stylesheet/less" type="text/css" href="less/bootstrap.min.css">
+	<link rel="stylesheet/less" type="text/css" href="less/bootstrap-responsive.min.css">
+	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
 	<script src="js/less-1.3.0.min.js"></script>
-</head>
 
 <body>
 
