--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="row-fluid">
 
-	<div class="span4 calendar red">
+	<div class="span4 calendar red" id="calendar">
 
 		<div class="vevent">
 			<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
@@ -44,5 +44,9 @@
 
 
 <script src="js/jquery-1.7.2.min.js"></script>
+<script src="js/json2.js"></script>
 <script src="js/bootstrap-2.0.3.min.js"></script>
+<script src="js/underscore-1.3.3.js"></script>
+<script src="js/backbone-0.9.2.js"></script>
+<script src="js/backbone-localstorage.js"></script>
 <script src="js/focalendar.js"></script>
