--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
 
 <header class="row-fluid">
 	<div class="span4"><h2>Calendar 1</h2></div>
-	<div class="span4"><h2>Project x</h2></div>
-	<div class="span4"><h2>Personal</h2></div>
+	<div class="span3"><h2>Project x</h2></div>
+	<div class="span3"><h2>Personal</h2></div>
+	<div class="span2"><h2>Notes</h2></div>
 </header>
 
-<div class="row-fluid">
+
+<div id="today" class="grid row-fluid">
+	<h3>today</h3>
+	<div class="hours row-fluid"></div>
+</div>
+<div id="tomorrow" class="grid row-fluid"><h3>tomorrow</h3></div>
+<div id="week" class="grid row-fluid"><h3>week</h3></div>
+<div id="week2" class="grid row-fluid"><h3>week after</h3></div>
+<div id="month" class="grid row-fluid"><h3>month</h3></div>
+<div id="month2" class="grid row-fluid"><h3>month after</h3></div>
+<div id="year" class="grid row-fluid"><h3>year</h3></div>
+<div id="year2" class="grid row-fluid"><h3>year after</h3></div>
+<div id="decade" class="grid row-fluid"><h3>decade</h3></div>
+<div id="decade2" class="grid row-fluid"><h3>decade after</h3></div>
+
+
+<div class="calendars row-fluid">
 
 	<div class="span4 calendar red" id="calendar">
 
@@ -31,12 +48,17 @@
 	</div>
 
 
-	<div class="span4 calendar green">
+	<div class="span3 calendar green">
 
 	</div>
 
 
-	<div class="span4 calendar blue">
+	<div class="span3 calendar blue">
+
+	</div>
+
+
+	<div class="span2 calendar orange">
 
 	</div>
 
