--- a/example.html
+++ b/example.html
@@ -5,6 +5,45 @@
 	<link type="text/css" href="less/bootstrap-responsive.min.css">
 	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
 	<script src="js/less-1.3.0.min.js"></script>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+	
+	
+	<style type="text/css" media="screen">
+		.sample {
+			display: block;
+			position: absolute;
+			background: red;
+			color: white;
+			top: 0;
+			left: 0;
+		}
+		
+		#panel {
+			display: block;
+			width: 200px;
+			height: 200px;
+			position: absolute;
+			right: 0;
+			top: 0;
+			background: green;
+		}
+		
+		#handle {
+			display: block;
+			width: 200px;
+			height: 20px;
+			position: absolute;
+			right: 0;
+			bottom: 0;		
+			background: #003500;	
+		}
+		
+		
+	</style>
+	
+</head>
 
 <body>
 
@@ -26,6 +65,11 @@
 		<div id="todo-count"></div>
 	</footer>
 
+
+	<div id="panel">
+		<div id="handle"></div>
+	</div>
+
 	</div>
 
 
@@ -37,6 +81,54 @@
 	<script src="js/backbone-0.9.2.js"></script>
 	<script src="js/backbone-localstorage.js"></script>
 	<script src="js/focalendar.js"></script>
+
+	
+	<script>
+	
+		$(function(){
+
+			document.getElementById("panel").addEventListener('touchstart', touchStart, false);
+			//document.body.addEventListener('click', touchHandler, false);
+
+			document.getElementById("panel").addEventListener('touchmove', touchMove, false);
+			document.getElementById("panel").addEventListener('touchrelease', touchRelease, false);
+
+
+			
+			var sample = $("<div class='handle'>TEST</div>");
+			$("#focalenderapp").append(sample);;
+			var handle = $("#handle");
+			var panel = $("#panel");
+			var height;
+			
+			var startX;
+			var startY;
+			
+			function touchStart(e){
+				e.preventDefault();
+				startY = e.touches[0].pageY;
+				height = parseInt(panel.css("height"));
+				
+			}
+
+			function touchMove(e){
+				e.preventDefault();
+				sample.css("left", e.touches[0].pageX);
+				sample.css("top", e.touches[0].pageY);
+				dY = e.touches[0].pageY - startY;
+				
+				panel.css("height", dY + height);
+				sample.text(handle.position().left + " / " + handle.position().top);
+			}
+
+			function touchRelease(event){
+
+			}
+		})
+	
+	</script>
+	
+	
 	
 	<!-- Templates -->
 
