--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <script src="js/underscore-1.3.3.js"></script>
 <script src="js/backbone-0.9.2.js"></script>
 <script src="js/backbone-localstorage.js"></script>
+<script src="js/moment-1.6.2.min.js"></script>
 <script src="js/focalendar.js"></script>
 
 	
