added first version of resizing by duration

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
 			<abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
 			<abbr class="dtend" title="2012-05-18-00">May 27 18h</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=Berlin,+Erwin-Schr%C3%B6dinger-Zentrum&hl=de&ie=UTF8&cid=559741620872275716">Berlin, Erwin-Schrödinger-Zentrum</a>.</span>
+			<abbr class="duration" title="PT1920M"></abbr>
 			<!-- <abbr class="duration" title="PT1920M"></abbr> --> 
 		</div>
 
@@ -73,6 +74,19 @@
 <script src="js/backbone-localstorage.js"></script>
 <script src="js/focalendar.js"></script>
 
+
+
+
+<script>
+$(document).ready(
+	sizeEvents()
+	);
+</script> 
+
+
+
+
+
 	
 	<!-- Templates -->
 
@@ -83,3 +97,4 @@
 		 <abbr class="dtend" title="<%= dtend %>"><%= dtend %></abbr>,
 		</div>
   </script>
+
