changing grid structure

--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
 	<div class="span2"><h2>Notes</h2></div>
 </header>
 
-<div id="2012-05-04" class="grid row-fluid today"><h3></h3></div>
-<div id="2012-05-05" class="grid row-fluid tomorrow"><h3></h3></div>
-<div id="2012-05-06" class="grid row-fluid week"><h3></h3></div>
-<div id="2012-05-07" class="grid row-fluid week"><h3></h3></div>
-<div id="2012-05-08" class="grid row-fluid week"><h3></h3></div>
-<div id="2012-05-09" class="grid row-fluid week"><h3></h3></div>
-<div id="2012-05-10" class="grid row-fluid week"><h3></h3></div>
-<div id="2012-05-11" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-12" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-13" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-14" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-15" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-16" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-17" class="grid row-fluid week2"><h3></h3></div>
-<div id="2012-05-18" class="grid row-fluid month"><h3></h3></div>
-<div id="2012-05-19" class="grid row-fluid month"><h3></h3></div>
-<div id="2012-05-20" class="grid row-fluid month"><h3></h3></div>
+<div id="grid">
+	<div id="2012-05-04" class="row-fluid today"><h3></h3></div>
+	<div id="2012-05-05" class="row-fluid tomorrow"><h3></h3></div>
+	<div id="2012-05-06" class="row-fluid week"><h3></h3></div>
+	<div id="2012-05-07" class="row-fluid week"><h3></h3></div>
+	<div id="2012-05-08" class="row-fluid week"><h3></h3></div>
+	<div id="2012-05-09" class="row-fluid week"><h3></h3></div>
+	<div id="2012-05-10" class="row-fluid week"><h3></h3></div>
+	<div id="2012-05-11" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-12" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-13" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-14" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-15" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-16" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-17" class="row-fluid week2"><h3></h3></div>
+	<div id="2012-05-18" class="row-fluid month"><h3></h3></div>
+	<div id="2012-05-19" class="row-fluid month"><h3></h3></div>
+	<div id="2012-05-20" class="row-fluid month"><h3></h3></div>
+</div>
 <!--
 <div id="tomorrow" class="grid row-fluid"><h3>tomorrow</h3></div>
 <div id="week" class="grid row-fluid"><h3>week</h3></div>
