--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="less/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="less/bootstrap-responsive.min.css">
 	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
+	<link rel="stylesheet" type="text/css" href="syncer/remoteStorage.css">
 	<script src="js/less-1.3.0.min.js"></script>
+
+<div id="remotestorage-connect"></div>
 
 <header class="row-fluid">
 	<div class="span4"><h2>Calendar 1</h2></div>
@@ -91,6 +94,7 @@
 <script src="js/backbone-localstorage.js"></script>
 <script src="js/moment-1.6.2.min.js"></script>
 <script src="js/focalendar.js"></script>
+<script src="syncer/include.js"></script>
 
 
 
