--- a/example.html
+++ b/example.html
@@ -53,6 +53,8 @@
 
 <body>
 
+	<div id="remotestorage-connect"></div>
+
 	<div id="focalenderapp">
 
 	<header>
@@ -85,7 +87,8 @@
 	<script src="js/bootstrap-2.0.3.min.js"></script>
 	<script src="js/underscore-1.3.3.js"></script>
 	<script src="js/backbone-0.9.2.js"></script>
-	<script src="js/backbone-localstorage.js"></script>
+	<script src="js/backbone-remotestorage.js"></script>
+	<script src="syncer/include.js"></script>
 	<script src="js/focalendar.js"></script>
 
 	
