--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Astra Filmpalast</a>.</span>
 		</div>
 
+		<div class="vevent">
+			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Dinner</a>: 
+			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Maredo</a>.</span>
+		</div>
+
+		<div class="vevent">
+			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Sleep</a>: 
+			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT480M">(8hours)</abbr>.
+		</div>
+
 		<div class="vevent" id="ux">
 			<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
 			<abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
