--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="less/bootstrap.min.css">
 	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
 	<script src="js/less-1.3.0.min.js"></script>
+	<link rel="shortcut icon" href="img/focalendar.png">
+	<link rel="apple-touch-icon" href="img/focalendar.png">
 
 <div id="remotestorage-connect"></div>
 
