--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 
 	<div class="span4 calendar red" id="calendar">
 
+		<div class="demovevent" id="event1">
+			<span>event 1</span>. <abbr class="duration" title="PT160M"></abbr>
+		</div>
+		<div class="demovevent" id="event2">
+			<span>event 2</span>. <abbr class="duration" title="PT1920M"></abbr>
+		</div>
+
+		
+
 		<div class="demovevent">
 			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Spy Kids 4D</a>: 
 			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Astra Filmpalast</a>.</span>
@@ -60,17 +69,14 @@
 			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT160M">(2hours)</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Maredo</a>.</span>
 		</div>
 
-		<div class="demovevent">
-			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Sleep</a>: 
-			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>. <abbr class="duration" title="PT480M">(8hours)</abbr>.
-		</div>
 
 		<div class="demovevent" id="ux">
 			<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
 			<abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
 			<abbr class="dtend" title="2012-05-18-00">May 27 18h</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=Berlin,+Erwin-Schr%C3%B6dinger-Zentrum&hl=de&ie=UTF8&cid=559741620872275716">Berlin, Erwin-Schrödinger-Zentrum</a>.</span>
 			<abbr class="duration" title="PT1920M"></abbr>
-			<!-- <abbr class="duration" title="PT1920M"></abbr> --> 
+
+
 		</div>
 
 
@@ -104,10 +110,6 @@
 <script src="js/moment-1.6.2.min.js"></script>
 <script src="syncer/include.js"></script>
 <script src="js/focalendar.js"></script>
-
-
-
-
 
 
 
