Enabled basic rendering existing events to first calendar.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div id="decade2" class="grid row-fluid"><h3>decade after</h3></div>
 -->
 
-<div class="calendars row-fluid">
+<div class="calendars row-fluid" id="calendars">
 
 	<div class="span4 calendar red" id="calendar">
 
