--- a/index.html
+++ b/index.html
@@ -1,128 +1,26 @@
 <!DOCTYPE html>
+<html>
+
+<head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
+
 	<title>Focalendar</title>
-	<link rel="stylesheet" type="text/css" href="less/bootstrap.min.css">
-	<link rel="stylesheet/less" type="text/css" href="less/focalendar.less">
-	<script src="js/less-1.3.0.min.js"></script>
+  <!-- TODO: come up with something here -->
+	<meta name="description" content="">
+
+	<link rel="stylesheet" href="style/main.css">
 	<link rel="shortcut icon" href="img/focalendar.png">
-	<link rel="apple-touch-icon" href="img/focalendar.png">
+  <!-- TODO: needs to be added -->
+	<link rel="apple-touch-icon-precomposed" href="img/focalendar-touch.png">
+</head>
 
-<div id="remotestorage-connect"></div>
+<body>
 
-<header class="row-fluid">
-	<div class="span4"><h2>Calendar 1</h2></div>
-	<div class="span3"><h2>Project x</h2></div>
-	<div class="span3"><h2>Personal</h2></div>
-	<div class="span2"><h2>Notes</h2></div>
-</header>
-
-<div id="grid">
-	<div id="2012-05-04" class="row-fluid today"><h3></h3></div>
-	<div id="2012-05-05" class="row-fluid tomorrow"><h3></h3></div>
-	<div id="2012-05-06" class="row-fluid week"><h3></h3></div>
-	<div id="2012-05-07" class="row-fluid week"><h3></h3></div>
-	<div id="2012-05-08" class="row-fluid week"><h3></h3></div>
-	<div id="2012-05-09" class="row-fluid week"><h3></h3></div>
-	<div id="2012-05-10" class="row-fluid week"><h3></h3></div>
-	<div id="2012-05-11" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-12" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-13" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-14" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-15" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-16" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-17" class="row-fluid week2"><h3></h3></div>
-	<div id="2012-05-18" class="row-fluid month"><h3></h3></div>
-	<div id="2012-05-19" class="row-fluid month"><h3></h3></div>
-	<div id="2012-05-20" class="row-fluid month"><h3></h3></div>
-</div>
-<!--
-<div id="tomorrow" class="grid row-fluid"><h3>tomorrow</h3></div>
-<div id="week" class="grid row-fluid"><h3>week</h3></div>
-<div id="week2" class="grid row-fluid"><h3>week after</h3></div>
-<div id="month" class="grid row-fluid"><h3>month</h3></div>
-<div id="month2" class="grid row-fluid"><h3>month after</h3></div>
-<div id="year" class="grid row-fluid"><h3>year</h3></div>
-<div id="year2" class="grid row-fluid"><h3>year after</h3></div>
-<div id="decade" class="grid row-fluid"><h3>decade</h3></div>
-<div id="decade2" class="grid row-fluid"><h3>decade after</h3></div>
--->
-
-<div class="calendars row-fluid" id="calendars">
-
-	<div class="span4 calendar red" id="calendar">
-										
-		<div class="vevent" id="event1">
-			<span>event 1</span>.
-			<abbr class="duration" title="PT160M"></abbr>
-		</div>
-
-		<div class="vevent" id="event2">
-			<span>event 2</span>.
-			<abbr class="duration" title="PT600M"></abbr>
-		</div>
-
-		<!-- 
-
-		<div class="demovevent">
-			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Spy Kids 4D</a>: 
-			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>.
-			<abbr class="duration" title="PT160M">(2hours)</abbr>.
-			<span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Astra Filmpalast</a>.</span>
-		</div>
-
-		<div class="demovevent">
-			<a class="summary url" href="http://www.imdb.com/title/tt1517489/">Dinner</a>: 
-			<abbr class="dtstart" title="2012-05-26-16-00">May 09, 16h</abbr>.
-			<abbr class="duration" title="PT160M">(2hours)</abbr>.
-			<span class="location"><a href="http://maps.google.de/maps/place?q=astra+filmpalast+Sterndamm+69+12487++Berlin+-+Treptow&hl=de&cid=10217250024112607220">Maredo</a>.</span>
-		</div>
+  This is Focalendar!
 
 
-		<div class="demovevent" id="ux">
-			<a class="summary url" href="http://www.uxcampeurope.org/">Ux Camp Europe 2012</a>: 
-			<abbr class="dtstart" title="2012-05-26-10-00">May 26 10h</abbr> until 
-			<abbr class="dtend" title="2012-05-18-00">May 27 18h</abbr>. <span class="location"><a href="http://maps.google.de/maps/place?q=Berlin,+Erwin-Schr%C3%B6dinger-Zentrum&hl=de&ie=UTF8&cid=559741620872275716">Berlin, Erwin-Schrödinger-Zentrum</a>.</span>
-			<abbr class="duration" title="PT1920M"></abbr>
-		</div>
+	<script src="src"></script>
+</body>
 
-		-->
-		</div>
-
-<div class="span3 calendar green">
-</div>
-
-<div class="span3 calendar blue">
-</div>
-
-<div class="span2 calendar orange">
-</div>
-
-
-
-</div>
-
-
-
-<script src="js/jquery-1.7.2.min.js"></script>
-<script src="js/json2.js"></script>
-<script src="js/bootstrap-2.0.3.min.js"></script>
-<script src="js/underscore-1.3.3.js"></script>
-<script src="js/backbone-0.9.2.js"></script>
-<script src="js/moment-1.6.2.min.js"></script>
-<script src="syncer/include.js"></script>
-<script src="js/backbone-remotestorage.js"></script>
-<script src="js/focalendar.js"></script>
-
-
-
-	
-	<!-- Templates -->
-
-<script type="text/template" id="item-template">
-	<div class="vevent">
-		<strong class="summary"><%= title %></strong>
-		<!-- <abbr class="dtstart" title="<%= dtstart %>"><%= dtstart %></abbr>
-		<abbr class="dtend" title="<%= dtend %>"><%= dtend %></abbr> -->
-	</div>
-</script>
-
+</html>
