list some months

--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
 
 <body>
 
-  This is Focalendar!
+  <h1>This is Focalendar</h1>
+
+  <div class="container">
+
+    <article class="month">
+      <h2 class="header"></h2>
+      <ul class="days">
+        <li class="day">
+          <span class="label"></span>
+          <ul class="events"></ul>
+        </li>
+      </ul>
+    </article>
+
+  </div>
 
 
-	<script src="src"></script>
+	<script src="src/index.js"></script>
 </body>
 
 </html>
