--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 
 <body>
 
-  <h1>This is Focalendar</h1>
-
   <div class="container">
 
     <article class="month">
-      <h2 class="header"></h2>
+      <h2 class="month-header"></h2>
       <ul class="days">
         <li class="day">
-          <span class="label"></span>
+          <span class="day-label"></span>
           <ul class="events"></ul>
         </li>
       </ul>
