--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
   </div>
 
 
-	<script src="src/index.js"></script>
+  <script src="src/index.js"></script>
+	<script src="src/utils.js"></script>
+  <script src="src/day.js"></script>
+  <script src="src/month.js"></script>
+  <script src="src/infiniteScroll.js"></script>
+  <script>focalendar()</script>
 </body>
 
 </html>
