--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     </li>
 
     <li class="event">
-      <span class="event-content"></span>
-      <textarea class="event-edit"></textarea>
+      <input type="text" class="event-content">
     </li>
 
   </div>
