store data in localstorage

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
   <script src="vendor/jquery.js"></script>
   <script src="src/index.js"></script>
+  <script src="src/store.js"></script>
 	<script src="src/day.js"></script>
   <script src="src/month.js"></script>
   <script src="src/event.js"></script>
   <script src="src/infiniteScroll.js"></script>
-  <script>focalendar()</script>
+  <script>focalendar.run()</script>
 </body>
 
 </html>
