--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   <script src="vendor/jquery.js"></script>
   <script src="src/index.js"></script>
+  <script src="src/utils.js"></script>
   <script src="src/store.js"></script>
 	<script src="src/day.js"></script>
   <script src="src/month.js"></script>
