added menu. top on desktop bottom on mobile. added link to today.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 <body>
 
+  <div class="menu">
+    <a href="#today" class="today-link">today</a>
+  </div>
+
   <div id="container">
 
     <article class="month">
@@ -44,6 +48,7 @@
 	<script src="src/day.js"></script>
   <script src="src/month.js"></script>
   <script src="src/event.js"></script>
+  <script src="src/menu.js"></script>
   <script src="src/infiniteScroll.js"></script>
   <script>focalendar.run()</script>
 </body>
