uppercase for menulinks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <div class="menu">
-    <a href="#today" class="today-link">today</a>
+    <a href="#today" class="today-link">TODAY</a>
   </div>
 
   <div id="container">
